apps/splitpro/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: splitpro
  namespace: splitpro
spec:
  ports:
    - name: http
      port: 3000
      targetPort: http
  selector:
    app.kubernetes.io/name: splitpro
